<resources>
    <string name="app_name">NavSample</string>

    <!-- bottom sheets -->
    <string name="delete_category">Delete category</string>
    <string name="delete_product">Delete product</string>
    <string name="delete_receipt">Delete receipt</string>
    <string name="delete_store">Delete store</string>
    <string name="crop_current_image">Crop current image</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="jump_to_receipt">Jump to receipt</string>
    <string name="jump_to_store">Jump to store</string>
    <string name="jump_to_category">Jump to category</string>

    <!-- stubbed -->
    <string name="store_nip_stub" translatable="false">Store</string>
    <string name="store_name_stub" translatable="false">012-34-56-789</string>
    <string name="category_name_stub" translatable="false">CATEGORY</string>
    <string name="title" translatable="false">Title</string>
    <string name="description" translatable="false">Description</string>
    <string name="text" translatable="false">Text</string>
    <string name="option" translatable="false">Option</string>
    <string name="plus_sign" translatable="false">+</string>
    <string name="minus_sign" translatable="false">-</string>
    <string name="colon_sign" translatable="false">:</string>
    <string name="x_sign" translatable="false">x</string>
    <string name="product_name_stub" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem.
    </string>
    <string name="product_counter" translatable="false">12</string>
    <string name="click_counter" translatable="false">8</string>
    <string name="date_value_stub" translatable="false">01-01-2024</string>
    <string name="time_value_stub" translatable="false">21:37</string>
    <string name="currency" translatable="false">PLN</string>
    <string name="product_final_price" translatable="false">2.01</string>
    <string name="product_quantity_price" translatable="false">2</string>
    <string name="product_unit_price" translatable="false">1.25</string>
    <string name="product_subtotal_price" translatable="false">2.50</string>
    <string name="product_discount_price" translatable="false">0.49</string>
    <string name="product_ptu_type_stub" translatable="false">A</string>

    <!-- hint-->
    <string name="lower_price">Lower boundary price</string>
    <string name="higher_price">Higher boundary price</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="category_name">Category name</string>
    <string name="tag_name">Tag name</string>
    <string name="store_name">Store name</string>
    <string name="nip">NIP</string>
    <string name="product_name">Product name</string>
    <string name="color_value">Color</string>
    <string name="category">Category</string>
    <string name="current_price">Current price</string>
    <string name="receipt_price">Receipt price</string>
    <string name="price_range">Price range</string>
    <string name="date_range">Date range</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>


    <!-- button-->
    <string name="camera_button">Camera</string>
    <string name="gallery_button">Gallery</string>
    <string name="manual_button">Manual</string>
    <string name="cancel_button">Cancel</string>
    <string name="confirm_button">Confirm</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>
    <string name="export_button">Export data</string>
    <string name="account_button">Account</string>
    <string name="guide_button">Self guide</string>
    <string name="sing_in_button">Sign in</string>
    <string name="sing_up_button">Sign up</string>
    <string name="sing_out_button">Sign out</string>
    <string name="delete_account_button">Delete account</string>
    <string name="continue_anonymous_button">Continue without sign in</string>

    <!-- row -->
    <string name="quantity">Quantity</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="ptu_value">PTU value</string>
    <string name="final_price">Final price</string>
    <string name="unit_price">Unit price</string>
    <string name="subtotal_price">Subtotal price</string>
    <string name="discount_price">Discount price</string>
    <string name="ptu_type">PTU</string>
    <string name="products">Products</string>

    <!-- tiles -->
    <string name="receipts_bar">Receipts</string>
    <string name="products_bar">Products</string>
    <string name="stores_bar">Stores</string>
    <string name="categories_bar">Categories</string>
    <string name="tags_bar">Tags</string>
    <string name="name_only">Name only</string>
    <string name="dynamic">Dynamic</string>
    <string name="price_only">Price only</string>
    <string name="swap">Swap</string>
    <string name="clear">Clear</string>
    <string name="merge">Merge</string>
    <string name="delete">Delete</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="confirm">Confirm</string>
    <string name="one_month_size">One months</string>
    <string name="multiple_month_size">Many months</string>
    <!--    diagram-->
    <string name="pie" translatable="false">Pie</string>
    <string name="radar" translatable="false">Radar</string>
    <string name="line" translatable="false">Line</string>
    <string name="bar" translatable="false">Bar</string>

    <!-- toolbar -->
    <string name="filter_title">Filter</string>
    <string name="new_category_title">New category</string>
    <string name="edit_category_title">Edit category</string>
    <string name="new_tag_title">New tag</string>
    <string name="edit_tag_title">Edit tag</string>
    <string name="new_product_title">New product</string>
    <string name="edit_product_title">Edit product</string>
    <string name="new_store_title">New store</string>
    <string name="edit_store_title">Edit store</string>
    <string name="new_receipt_title">New receipt</string>
    <string name="edit_receipt_title">Edit receipt</string>
    <string name="crop_product_title">Crop products section</string>
    <string name="export_data_title">Export data</string>

    <string name="suggestion_prefix">Maybe</string>
    <string name="empty_value_error">Empty value</string>
    <string name="bad_value_error">Bad value</string>
    <string name="use_default_category">Use default category</string>
    <string name="bad_inputs">Incorrect input data</string>
    <string name="invalid_color_format">Invalid color format</string>
    <string name="category_already_exists">Category already exists</string>
    <string name="tag_already_exists">Tag already exists</string>
    <string name="delete_confirmation_title">Confirm delete</string>
    <string name="delete_category_confirmation_dialog">Are you sure to delete the item?</string>
    <string name="delete_store_confirmation_dialog">Are you sure to delete the item with dependent receipt and products?</string>
    <string name="delete_receipt_confirmation_dialog">Are you sure to delete the item with dependent products?</string>
    <string name="delete_product_confirmation_dialog">Are you sure to delete the item?</string>

    <string name="nip_correct">NIP correct</string>
    <string name="nip_incorrect">NIP incorrect</string>
    <string name="minimal_price_boundary_incorrect">Minimal price has to be lower than maximal</string>
    <string name="maximal_price_boundary_incorrect">Maximal price has to be greater than minimal</string>
    <string name="conversion_error">Incorrect value</string>
    <string name="pick_store">Pick store</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="authentication_error">Fill all fields</string>
    <string name="empty_name">Fill name</string>
    <string name="empty_nip">Fill NIP</string>
    <string name="pick_category">Pick category</string>
    <string name="nip_already_exists">NIP already exists</string>
    <string name="check_internet_connection">Check internet connection</string>
    <string name="capture_image_failed">Capture image failed</string>
    <string name="open_camera_error">Cannot run camera</string>
    <string name="permission_denied">Permission denied</string>
    <string name="no_data_found">No data found</string>
    <string name="incorrect_email">Email is incorrect</string>
    <string name="password_too_short">Password is too short</string>
    <string name="different_passwords">Password are different</string>
    <string name="category_not_set">Category is not set</string>
    <string name="store_not_set">Store is not set</string>
    <string name="receipt_not_set">Receipt is not set</string>
    <string name="no_image_set">No image loaded</string>
    <string name="export_finisher">Exported to file</string>
    <string name="should_continue">Continue?</string>

    <!-- menu -->
    <string name="add_new">Add new</string>
    <string name="ai_assistant">AI Assistant</string>
    <string name="import_image">Import/edit image</string>
    <string name="reorder">Reorder</string>
    <string name="rotate">Rotate</string>
    <string name="settings">Settings</string>
    <string name="list">List</string>
    <string name="chart">Chart</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="sort">Sort</string>
    <string name="refresh">Refresh</string>
    <string name="search_tag">Search tag</string>
    <string name="tag_name_stub">Tag name</string>
    <string name="delete_tag">Delete tag</string>
    <string name="add_tag">+ Add tag</string>
    <string name="tags">Tags</string>
    <string name="second_suggestion_prefix">or</string>

</resources>