<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <androidx.cardview.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="4dp"
            app:cardCornerRadius="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="12dp"
                android:paddingVertical="6dp">


                <LinearLayout
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/store_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="@string/store_name_stub"
                        android:textSize="14sp" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />


                    <TextView
                        android:id="@+id/category_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="@string/category_name_stub"
                        android:textAlignment="textEnd"
                        android:textSize="14sp" />
                </LinearLayout>

                <View
                    android:id="@+id/category_color"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="1dp"
                    android:background="#BBBBBB"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/header" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/main2_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/category_color">

                    <TextView
                        android:id="@+id/product_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="4dp"
                        android:paddingTop="4dp"
                        android:text="@string/product_name_stub"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toStartOf="@+id/final_price_card"

                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <androidx.cardview.widget.CardView
                        android:id="@+id/final_price_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:backgroundTint="@color/background_tile_chosen"
                        app:cardCornerRadius="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/final_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/product_final_price"
                            android:textSize="25sp"
                            android:textStyle="bold" />
                    </androidx.cardview.widget.CardView>
                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/option"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="4dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/main2_layout">

                    <TextView
                        android:id="@+id/receipt_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_value_stub"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/boundary_button"
                        style="@style/SortingCardViewStyle"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <View
                                android:id="@+id/boundary"
                                android:layout_width="35dp"
                                android:layout_height="24dp"

                                android:layout_marginBottom="1dp"
                                android:background="@drawable/arrow_drop_down"
                                android:textAlignment="center" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/additional"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/option">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.75"
                                android:background="@drawable/obramowanie"
                                android:gravity="center"
                                android:text="@string/quantity" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:background="@drawable/obramowanie"
                                android:gravity="center"
                                android:text="@string/unit_price" />

                            <TextView
                                android:layout_width="0dp"
                                android:paddingHorizontal="2dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:background="@drawable/obramowanie"
                                android:gravity="center"
                                android:text="@string/subtotal_price" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:background="@drawable/obramowanie"
                                android:gravity="center"
                                android:text="@string/discount_price" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.5"
                                android:background="@drawable/obramowanie"
                                android:gravity="center"
                                android:text="@string/ptu_type" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:id="@+id/quantity"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.75"
                                android:background="@drawable/obramowanie"
                                android:gravity="center"
                                android:text="@string/product_quantity_price" />

                            <TextView
                                android:id="@+id/unit_price"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/obramowanie"
                                android:gravity="center"
                                android:text="@string/product_unit_price" />

                            <TextView
                                android:id="@+id/subtotal_price"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/obramowanie"
                                android:gravity="center"
                                android:text="@string/product_subtotal_price" />

                            <TextView
                                android:id="@+id/discount_price"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/obramowanie"
                                android:gravity="center"
                                android:text="@string/product_discount_price" />

                            <TextView
                                android:id="@+id/ptu_type"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:background="@drawable/obramowanie"
                                android:gravity="center"
                                android:text="@string/product_ptu_type_stub" />

                        </LinearLayout>
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>