<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    tools:context=".fragments.dialogs.SortingDialog">

    <androidx.cardview.widget.CardView
        android:id="@+id/property_layout"
        style="@style/PopupCardViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/direction_layout"
        app:layout_constraintStart_toStartOf="@+id/direction_layout"
        app:layout_constraintTop_toTopOf="parent">


        <RadioGroup
            android:id="@+id/property_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checkedButton="@+id/first_button"
            android:padding="20dp">

            <RadioButton
                android:id="@+id/first_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/option" />

            <RadioButton
                android:id="@+id/second_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/option" />

            <RadioButton
                android:id="@+id/third_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/option" />

            <RadioButton
                android:id="@+id/fourth_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/option" />
        </RadioGroup>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/direction_layout"
        style="@style/PopupCardViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/property_layout">

        <RadioGroup
            android:id="@+id/direction_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checkedButton="@+id/ascending_button"
            android:orientation="horizontal"
            android:padding="20dp">

            <RadioButton
                android:id="@+id/ascending_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ascending" />

            <RadioButton
                android:id="@+id/descending_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/descending" />
        </RadioGroup>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/confirm_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/direction_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>